--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -548,4 +548,131 @@
   }
 }
 
+.pricing {
+  background-color: $bg;
+  padding: 145px 0 160px;
+
+  &__title {
+    margin-bottom: 90px;
+  }
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  ul.pricing__item {
+    background-color: #fff;
+    padding: 24px 25px 30px;
+    width: 370px;
+    text-align: center;
+  } 
+
+  &__item-name {
+    font-size: 16px;
+    line-height: 22px;
+    color: $title;
+    @extend %opensans-700;
+    text-align: left;
+    margin-bottom: 8px;
+  }
+
+  &__item-num {
+    font-size: 80px;
+    line-height: 109px;
+    color: $title;
+    margin-bottom: 50px;
+  }
+
+  &__item-num sup {
+    font-size: 40px;
+    line-height: 54px;
+  }
+
+  &__item-li {
+    font-size: 16px;
+    line-height: 22px;
+    color: $title;
+    margin-bottom: 30px;
+  }
+
+  &__item-link {
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 1.2px;
+    color: $title;
+    text-transform: uppercase;
+    @extend %montserrat-700;
+    transition: all .3s;
+
+    &:hover {
+      color: $accent;
+    }
+  }
+}
+
+.contact {
+  padding: 145px 0 160px;
+  background-image: url('../images/map.jpg');
+  background-repeat: no-repeat;
+  background-size: 43%;
+  background-position: right;
+
+  &__title {
+    margin-bottom: 95px;
+  }
+
+  &__form {
+    max-width: 570px;
+  }
+
+  &__form-input,
+  &__form-textarea{
+    display: block;
+    border: none;
+    border-bottom: 2px solid $default;
+    font-size: 16px;
+    padding: 16px 0;
+    margin-bottom: 16px;
+    @extend %opensans-700;
+    width: 100%;
+  }
+
+  &__form-input::placeholder,
+  &__form-textarea::placeholder {
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 3.71px;
+    @extend %opensans-400;
+    color: #B8B8B8;
+    text-transform: uppercase;
+  }
+
+  &__form-textarea {
+    min-height: 160px;
+    resize: none;
+    margin-top: 50px;
+  }
+
+  &__form-btn {
+    font-size: 11px;
+    line-height: 13px;
+    letter-spacing: 2px;
+    color: #fff;
+    text-transform: uppercase;
+    @extend %montserrat-700;
+    padding: 17px 70px 15px;
+    border: none;
+    background-color: $title;
+    margin-top: 40px;
+    cursor: pointer;
+    transition: all .5s;
+
+    &:hover {
+      color: $title;
+      background-color: $accent;
+    }
+  }
+}
+
 @import 'media';
