--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,15 @@
 @import 'global';
 
 .header {
+  &__top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+    z-index: 999;
+  }
+
   &__top-inner {
     padding-bottom: 30px;
     display: flex;
@@ -17,7 +26,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    // padding-top: 100px;
+    padding-top: 100px;
   }
 
   &__content-inner {
@@ -36,7 +45,7 @@
     color: #000000;
     margin-top: auto;
     margin-bottom: 70px;
-    padding-top: 150px;
+    padding-top: 80px;
   }
 
   &__subtitle {
@@ -57,6 +66,7 @@
 
   &__list {
     display: flex;
+    margin-bottom: 10px;
   }
 
   &__list-item+.menu__list-item {
@@ -566,6 +576,7 @@
     padding: 24px 25px 30px;
     width: 370px;
     text-align: center;
+    position: relative;
   } 
 
   &__item-name {
@@ -577,11 +588,24 @@
     margin-bottom: 8px;
   }
 
+  &__item-name--popular {
+    background-color: $accent;
+    padding: 5px 20px 4px;
+    width: 96px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    left: 0;
+  }
+
   &__item-num {
     font-size: 80px;
     line-height: 109px;
     color: $title;
     margin-bottom: 50px;
+  }
+
+  &__item-num--popular {
+    padding-top: 29px;
   }
 
   &__item-num sup {
@@ -615,8 +639,8 @@
   padding: 145px 0 160px;
   background-image: url('../images/map.jpg');
   background-repeat: no-repeat;
-  background-size: 43%;
-  background-position: right;
+  background-size: 40%;
+  background-position: right 65%;
 
   &__title {
     margin-bottom: 95px;
